# mygeopy

./: LICENSE.txt  README.md  pyproject.toml  test-trianglepy.py
.github/workflows/: python-tests.yml
mygeopy/: triangle.py
mygeopy.egg-info/: PKG-INFO  SOURCES.txt
tests/: doctest_triangle.py
